--- a/scss/main.scss
+++ b/scss/main.scss
@@ -38,7 +38,7 @@
 
 .col-xs-6 {
     width: 50%;
-    height: 800px;
+    // height: 800px;
 }
 
 .col-xs-4 {
@@ -49,7 +49,11 @@
     width: 16.66%
 }
 
-.header,
+.header {
+    height: 50px;
+    background: #ddd;
+}
+
 .footer {
     height: 250px;
     background: #ccc;
@@ -57,12 +61,12 @@
 
 .box1 {
     background: #fcc;
-    height: 250px;
+    // height: 250px;
     border: 1px solid #c33;
 }
 
 .box2 {
     background: #ffefff;
-    height: 150px;
+    // height: 150px;
     border: 1px solid #c33;
 }
